RESOLVED FIXED 254602
Web Inspector: Web inspector become unresponsive after opening online photos
https://bugs.webkit.org/show_bug.cgi?id=254602
Summary Web Inspector: Web inspector become unresponsive after opening online photos
Razvan Caliman
Reported 2023-03-28 11:34:57 PDT
<rdar://104210977> ## Steps to reproduce: - Open Web Inspector and switch to the Sources tab - Navigate to https://en.wikipedia.org/wiki/Malta - Click on any photo to enlarge it (JPEG or PNG, not SVG images) - Click on the enlarged photo to navigate to its URL ## Result In the Sources panel, instead of thumbnail of the photo, there's large block of base64-encoded text of the image. For large images, Web Inspector freezes while rendering this block.
Attachments
Razvan Caliman
Comment 1 2023-03-28 11:37:23 PDT
Razvan Caliman
Comment 2 2023-03-28 11:59:09 PDT
EWS
Comment 3 2023-03-31 09:23:12 PDT
Committed 262409@main (9b097d0ecda3): <https://commits.webkit.org/262409@main> Reviewed commits have been landed. Closing PR #12063 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.